--- a/BaiTapLon-HCJ/about.html
+++ b/BaiTapLon-HCJ/about.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="slick/slick.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-achoo.css">
 </head>
 
 <body>
@@ -27,37 +28,37 @@
                         <p class="info-head" style="display: inline">Email: <span>inquiry@nognic.com</span></p>
                     </div>
                     <div class="col-lg-6 combobox">
-                        <div class="dropdown show">
+                        <div class="dropdown">
                             <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
                                 <i class="far fa-user"></i> My Account
                             </a>
-                            <div class="dropdown-menu myaccount-form-hh213">
-                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="my-account.html">MY ACCOUNT</a>
-                                <div class="myaccount-line-hh213 border-info"></div>
-                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="Wish-list.html">WISHLIST</a>
-                                <div class="myaccount-line-hh213 border-info"></div>
-                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="checkout.html">CHECKOUT</a>
-                                <div class="myaccount-line-hh213 border-info"></div>
-                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="blog.html">BLOG</a>
-                                <div class="myaccount-line-hh213 border-info"></div>
-                                <a class="dropdown-item myaccount-bullet-hh213 w-100" href="#">LOGIN</a>
-                                <div class="myaccount-line-hh213 border-info"></div>
+                            <div class="dropdown-menu myaccount-form-achoo">
+                                <a class="dropdown-item myaccount-bullet-achoo w-100" href="my-account.html">MY ACCOUNT</a>
+                                <div class="myaccount-line-achoo border-info"></div>
+                                <a class="dropdown-item myaccount-bullet-achoo w-100" href="Wish-list.html">WISHLIST</a>
+                                <div class="myaccount-line-achoo border-info"></div>
+                                <a class="dropdown-item myaccount-bullet-achoo w-100" href="checkout.html">CHECKOUT</a>
+                                <div class="myaccount-line-achoo border-info"></div>
+                                <a class="dropdown-item myaccount-bullet-achoo w-100" href="blog.html">BLOG</a>
+                                <div class="myaccount-line-achoo border-info"></div>
+                                <a class="dropdown-item myaccount-bullet-achoo w-100" href="my-account.html">LOGIN</a>
+                                <div class="myaccount-line-achoo border-info"></div>
                             </div>
                         </div>
-                        <div class="dropdown show">
+                        <div class="dropdown">
                             <a class="dropdown-toggle unit" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
                                 $ USD
                             </a>
-                            <div class="dropdown-menu unit-menu" aria-labelledby="dropdownMenuLink">
+                            <div class="dropdown-menu myaccount-form-achoo" aria-labelledby="dropdownMenuLink">
                                 <a class="dropdown-item unit-item" href="#">$ USD</a>
                                 <a class="dropdown-item unit-item" href="#">đ VND</a>
                             </div>
                         </div>
-                        <div class="dropdown show">
+                        <div class="dropdown">
                             <a class="dropdown-toggle language" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
                                 <img src="img/fr.png" alt=""> FRENCH
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <div class="dropdown-menu myaccount-form-achoo" aria-labelledby="dropdownMenuLink">
                                 <a class="dropdown-item language-item" href="#"><img src="img/fr.png" alt=""> FRENCH</a>
                                 <a class="dropdown-item language-item" href="#"><img src="img/vn.png" alt=""> VIETNAMESE</a>
                                 <a class="dropdown-item language-item" href="#"><img src="img/uk.png" alt=""> ENGLISH</a>
@@ -75,54 +76,57 @@
                         <a href="home.html"><img src="img/logo.png" class="logo" alt=""></a>
                     </div>
                     <div class="col-md-4 col-sm-4 icon">
-                        <div class="dropdown cart-bg-hh213">
+                        <div class="dropdown cart-bg-achoo">
                         <a href="" data-toggle="dropdown" data-target="#"><img src="img/circle-bag.png" align="right" alt=""></a>
-                        <div class="dropdown-menu cart-form-hh213">
-                            <p class="cart-title-hh213">2 items in your cart</p>
+                        <div class="dropdown-menu cart-form-achoo">
+                            <p class="cart-title-achoo">2 items in your cart</p>
                             <div class="row">
                                 <div class="col-lg-4">
-                                    <img src="./img/Strawberries.jpg" alt="" class="cart-img-hh213">
+                                    <img src="./img-achoo/Strawberries.jpg" alt="" class="cart-img-achoo">
                                 </div>
                                 <div class="col-lg-6">
-                                    <p class="cart-title-product-hh213">Strawberries, 16 oz</p>
-                                    <p class="cart-title-price-hh213">1 x $2.50</p>
+                                    <p class="cart-title-product-achoo">Strawberries, 16 oz</p>
+                                    <p class="cart-title-price-achoo">1 x $2.50</p>
                                 </div>
                                 <div class="col-lg-2">
-                                    <a href="#" class="nav-link text-secondary cart-delete-hh213">X</a>
+                                    <a href="#" class="nav-link text-secondary cart-delete-achoo">X</a>
                                 </div>
                             </div>
-                            <div class="my-account-form-space-hh213">
+                            <div class="my-account-form-space-achoo">
                             </div>
                             <div class="row">
                                 <div class="col-lg-4">
-                                    <img src="./img/Broccoli.jpg" alt="" class="cart-img-hh213">
+                                    <img src="./img-achoo/Broccoli.jpg" alt="" class="cart-img-achoo">
                                 </div>
                                 <div class="col-lg-6">
-                                    <p class="cart-title-product-hh213">Broccoli, bunch</p>
-                                    <p class="cart-title-price-hh213">2 x $4.00</p>
+                                    <p class="cart-title-product-achoo">Broccoli, bunch</p>
+                                    <p class="cart-title-price-achoo">2 x $4.00</p>
                                 </div>
                                 <div class="col-lg-2">
-                                    <a href="#" class="nav-link text-secondary cart-delete-hh213">X</a>
+                                    <a href="#" class="nav-link text-secondary cart-delete-achoo">X</a>
                                 </div>
                             </div>  
-                            <div class="my-account-form-space-hh213">
+                            <div class="my-account-form-space-achoo">
                             </div>
-                            <div class="cart-line-hh213">
+                            <div class="cart-line-achoo">
                             </div>                       
                             <div class="row">
-                                <p class="cart-total-hh213">Total: $6.50</p>
+                                <p class="cart-total-achoo">Total: $6.50</p>
                             </div>  
                             <div class="row">
                                 <div class="col-lg-6">
-                                    <button type="submit" class="form-control btn-outline-secondary" id="viewcart">VIEW CART</button>
+                                    <a href="Add-to-cart.html" class="text-dark form-control btn-outline-secondary" id="viewcart">VIEW CART</a>
                                 </div>
                                 <div class="col-lg-6">
-                                    <button type="submit" class="form-control btn-success" id="CHECKOUT">CHECKOUT</button>
+                                    <a href="checkout.html" class="text-light form-control btn-success" id="CHECKOUT">CHECKOUT</a>
                                 </div>
                             </div>                             
                         </div>
+                    
                         <a href=""><img src="img/circle-search.png" align="right" alt=""></a>
                     </div>
+                    </div>
+             
                 </div>
             </div>
             <nav class="navbar navbar-expand-xl navbar-dark container menu">
