--- a/BaiTapLon-HCJ/Wish-list.html
+++ b/BaiTapLon-HCJ/Wish-list.html
@@ -16,24 +16,23 @@
 <body>
   <!--HEADER-->
   <header>
-        <div class="info-bar">
-            <div class="row">
-                <div class="col-lg-6">
-                    <a href="" class="social"><i class="fab fa-facebook-f"></i></a>
-                    <a href="" class="social"><i class="fab fa-twitter"></i></a>
-                    <a href="" class="social"><i class="fab fa-google-plus-g"></i></a>
-                    <a href="" class="social"><i class="fab fa-pinterest-p"></i></a>
-                    <a href="" class="social"><i class="fab fa-youtube"></i></a>
-                    <p class="info-head" style="display: inline">Phone: <span>(+91) 123456789</span></p>
-                    <p class="info-head" style="display: inline">Email: <span>inquiry@nognic.com</span></p>
-                </div>
-                <div class="col-lg-6">
-                    <div class="dropdown show">
-                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                            aria-haspopup="true">
-                            <i class="far fa-user"></i> My Account
-                        </a>
-                        <div class="dropdown-menu myaccount-form-achoo">
+            <div class="info-bar">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <a href="" class="social"><i class="fab fa-facebook-f"></i></a>
+                        <a href="" class="social"><i class="fab fa-twitter"></i></a>
+                        <a href="" class="social"><i class="fab fa-google-plus-g"></i></a>
+                        <a href="" class="social"><i class="fab fa-pinterest-p"></i></a>
+                        <a href="" class="social"><i class="fab fa-youtube"></i></a>
+                        <p class="info-head" style="display: inline">Phone: <span>(+91) 123456789</span></p>
+                        <p class="info-head" style="display: inline">Email: <span>inquiry@nognic.com</span></p>
+                    </div>
+                    <div class="col-lg-6 combobox">
+                        <div class="dropdown">
+                            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
+                                <i class="far fa-user"></i> My Account
+                            </a>
+                            <div class="dropdown-menu myaccount-form-achoo">
                                 <a class="dropdown-item myaccount-bullet-achoo w-100" href="my-account.html">MY ACCOUNT</a>
                                 <div class="myaccount-line-achoo border-info"></div>
                                 <a class="dropdown-item myaccount-bullet-achoo w-100" href="Wish-list.html">WISHLIST</a>
@@ -45,41 +44,39 @@
                                 <a class="dropdown-item myaccount-bullet-achoo w-100" href="my-account.html">LOGIN</a>
                                 <div class="myaccount-line-achoo border-info"></div>
                             </div>
-                    </div>
-                    <div class="dropdown show">
-                        <a class="dropdown-toggle unit" href="#" role="button" id="dropdownMenuLink"
-                            data-toggle="dropdown" aria-haspopup="true">
-                            $ USD
-                        </a>
-                        <div class="dropdown-menu unit-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item unit-item" href="#">$ USD</a>
-                            <a class="dropdown-item unit-item" href="#">đ VND</a>
                         </div>
-                    </div>
-                    <div class="dropdown show">
-                        <a class="dropdown-toggle language" href="#" role="button" id="dropdownMenuLink"
-                            data-toggle="dropdown" aria-haspopup="true">
-                            <img src="img/fr.png" alt=""> FRENCH
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item language-item" href="#"><img src="img/fr.png" alt=""> FRENCH</a>
-                            <a class="dropdown-item language-item" href="#"><img src="img/vn.png" alt=""> VIETNAMESE</a>
-                            <a class="dropdown-item language-item" href="#"><img src="img/uk.png" alt=""> ENGLISH</a>
+                        <div class="dropdown">
+                            <a class="dropdown-toggle unit" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
+                                $ USD
+                            </a>
+                            <div class="dropdown-menu myaccount-form-achoo" aria-labelledby="dropdownMenuLink">
+                                <a class="dropdown-item unit-item" href="#">$ USD</a>
+                                <a class="dropdown-item unit-item" href="#">đ VND</a>
+                            </div>
+                        </div>
+                        <div class="dropdown">
+                            <a class="dropdown-toggle language" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
+                                <img src="img/fr.png" alt=""> FRENCH
+                            </a>
+                            <div class="dropdown-menu myaccount-form-achoo" aria-labelledby="dropdownMenuLink">
+                                <a class="dropdown-item language-item" href="#"><img src="img/fr.png" alt=""> FRENCH</a>
+                                <a class="dropdown-item language-item" href="#"><img src="img/vn.png" alt=""> VIETNAMESE</a>
+                                <a class="dropdown-item language-item" href="#"><img src="img/uk.png" alt=""> ENGLISH</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-sm-3 icon">
-                    <a href=""><img src="img/circle-heart.png" alt=""></a>
-                </div>
-                <div class="col-md-4 col-sm-5 logo-box">
-                    <a href="home.html"><img src="img/logo.png" class="logo" alt=""></a>
-                </div>
-                <div class="col-md-4 col-sm-4 icon">
-                     <div class="dropdown cart-bg-achoo">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 col-sm-3 icon">
+                        <a href=""><img src="img/circle-heart.png" alt=""></a>
+                    </div>
+                    <div class="col-md-4 col-sm-5 logo-box">
+                        <a href="home.html"><img src="img/logo.png" class="logo" alt=""></a>
+                    </div>
+                    <div class="col-md-4 col-sm-4 icon">
+                        <div class="dropdown cart-bg-achoo">
                         <a href="" data-toggle="dropdown" data-target="#"><img src="img/circle-bag.png" align="right" alt=""></a>
                         <div class="dropdown-menu cart-form-achoo">
                             <p class="cart-title-achoo">2 items in your cart</p>
@@ -128,17 +125,16 @@
                     
                         <a href=""><img src="img/circle-search.png" align="right" alt=""></a>
                     </div>
+                    </div>
+             
                 </div>
             </div>
-        </div>
-        <nav class="navbar navbar-expand-xl navbar-dark container menu">
-            <button class="navbar-toggler" id="btn-collapse" type="button" data-toggle="collapse"
-                data-target="#navbarSupportedContentXL" aria-controls="navbarSupportedContentXL" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContentXL">
-                <ul class="navbar-nav">
+            <nav class="navbar navbar-expand-xl navbar-dark container menu">
+                <button class="navbar-toggler" id="btn-collapse" type="button" data-toggle="collapse" data-target="#navbarSupportedContentXL" aria-controls="navbarSupportedContentXL" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContentXL">
+                    <ul class="navbar-nav">
                         <!--MEGAMENU-->
                         <li class="nav-item position-static parent"><img src="img/leaf.png" class="child leaf-achoo" alt=""><a href="#" data-toggle="dropdown" data-target="#">Home</a>
                         <!-- div.w-100 make it mega menu, div.top-auto opens the mega menu exactly as position like other normal menu -->
@@ -216,9 +212,9 @@
                         <li class="nav-item"><a href="blog.html">Blog</a></li>
                         <li class="nav-item"><a href="contact.html">Contact Us</a></li>
                     </ul>
-            </div>
-        </nav>
-    </header>
+                </div>
+            </nav>
+        </header>
   <!--KET THUC HEADER-->
   <!--MAIN-->
   <main>
