--- a/BaiTapLon-HCJ/about.html
+++ b/BaiTapLon-HCJ/about.html
@@ -323,8 +323,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-7" style="background: #88c442">
-                        
+                    <div class="col-md-7">
+                        <img src="img/about-2-fruit.png" width="100%" alt="">
                     </div>
                 </div>
             </div>
