--- a/BaiTapLon-HCJ/product.html
+++ b/BaiTapLon-HCJ/product.html
@@ -228,7 +228,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" style="margin-bottom: 100px">
                     <div class="col-md-3">
                         <div class="product-cate">
                             <p class="product-left-title">Categories</p>
@@ -437,7 +437,7 @@
                     <!-- Left -->
                     <div class="col-md-9">
                         <div class="product-table-title">
-                            <div class="row" style="margin-top: 125px;margin-bottom: 30px">
+                            <div class="row" style="margin-top: 125px;">
                                 <div class="col-sm-4">
                                     <p style="font-size: 16px;color:#5a4a3b">Showing 1-12 of 30 results</p>
                                 </div>
