--- a/BaiTapLon-HCJ/home.html
+++ b/BaiTapLon-HCJ/home.html
@@ -312,7 +312,7 @@
                                 <img src="img/Jessica-Simpson-Fruit.png" class="arr-img" alt="">
                                 <p class="arritem-title">Jessica Simpson Fruit's</p>
                                 <p class="arritem-price">$19.00<del>$12.00</del></p>
-                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                             </div>
                             <div class="middle">
                                 <div class="wrapper-icon">
@@ -331,7 +331,7 @@
                                 <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
-                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                             </div>
                             <div class="middle">
                                 <div class="wrapper-icon">
@@ -353,7 +353,7 @@
                                 <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
-                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                             </div>
                             <div class="middle">
                                 <div class="wrapper-icon">
@@ -372,7 +372,7 @@
                                 <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
-                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                             </div>
                             <div class="middle">
                                 <div class="wrapper-icon">
@@ -391,7 +391,7 @@
                                 <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
-                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                             </div>
                             <div class="middle">
                                 <div class="wrapper-icon">
@@ -410,7 +410,7 @@
                                 <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
-                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                             </div>
                             <div class="middle">
                                 <div class="wrapper-icon">
@@ -429,7 +429,7 @@
                                 <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
-                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                             </div>
                             <div class="middle">
                                 <div class="wrapper-icon">
@@ -448,7 +448,7 @@
                                 <img src="img/Jessica-Simpson-Fruit.png" alt="">
                                 <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
                                 <p class="arritem-price">$32.00<del>$12.00</del></p>
-                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                             </div>
                             <div class="middle">
                                 <div class="wrapper-icon">
@@ -495,7 +495,7 @@
                                     <img src="img/star.png" alt="">
                                     <img src="img/star.png" alt="">
                                     <p class="deal-price">$32.00<del>$12.00</del></p>
-                                    <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                    <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                                 </div>
                             </div>
                             <hr>
@@ -511,7 +511,7 @@
                                     <img src="img/star-gray.png" alt="">
                                     <img src="img/star-gray.png" alt="">
                                     <p class="deal-price">$32.00<del>$12.00</del></p>
-                                    <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                    <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                                 </div>
                             </div>
                             <hr>
@@ -527,7 +527,7 @@
                                     <img src="img/star.png" alt="">
                                     <img src="img/star.png" alt="">
                                     <p class="deal-price">$32.00<del>$12.00</del></p>
-                                    <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                    <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                                 </div>
                             </div>
                         </div>
@@ -544,7 +544,7 @@
                                     <img src="img/star.png" alt="">
                                 </div>
                                 <p class="deal-price">$32.00<del>$12.00</del></p>
-                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                             </div>
                         </div>
                         <div class="col-xl-3 deal-right">
@@ -560,7 +560,7 @@
                                     <img src="img/star.png" alt="">
                                     <img src="img/star.png" alt="">
                                     <p class="deal-price">$32.00<del>$12.00</del></p>
-                                    <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                    <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                                 </div>
                             </div>
                             <hr>
@@ -576,7 +576,7 @@
                                     <img src="img/star-gray.png" alt="">
                                     <img src="img/star-gray.png" alt="">
                                     <p class="deal-price">$32.00<del>$12.00</del></p>
-                                    <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                    <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                                 </div>
                             </div>
                             <hr>
@@ -592,7 +592,7 @@
                                     <img src="img/star.png" alt="">
                                     <img src="img/star.png" alt="">
                                     <p class="deal-price">$32.00<del>$12.00</del></p>
-                                    <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                                    <a href=""><button><img src="img/gio-hang.png" alt="">BUY NOW</button></a>
                                 </div>
                             </div>
                         </div>
@@ -669,10 +669,10 @@
                     <div class="arrival-title">
                         <img src="img/3leaf.png" alt=""><br>
                         <img src="img/line-left.png" class="img-line" id="left-line" alt="">
-                        <p>ORGANIC <span>NEWS</span></p>
+                        <p>DELIVERY <span>PROCESS</span></p>
                         <img src="img/line.png" class="img-line" alt="">
                     </div>
-                    <div class="row">
+                    <div class="row" style="margin-top: 30px">
                         <div class="col-md-6 col-xl-3">
                             <img src="img/step1.png" class="ml-3 mr-4" alt="">
                             <img src="img/process-line.png" alt="">
@@ -710,8 +710,12 @@
                        <p class="newsl-signup">SIGN UP <span>NEWSLETTER</span></p>
                        <p class="newsl-detail">Sign up our newsletter to recieve <span>latest news </span>and <span>greate offers</span>:</p>
                    </div>
-                   <input type="text" class="input-newsl" placeholder="Enter your email here...">
-                   <button class="btn-newsl">Subcribe</button>
+                   <form id="newsl">
+                       <div class="form-group">
+                           <input type="email" class="form-control input-newsl" placeholder="Enter your email here..." required="">
+                           <button type="submit" class="btn-newsl">Subcribe</button>
+                       </div>
+                   </form>
                </div>
             </div>
             <div class="brand">
