--- a/BaiTapLon-HCJ/product.html
+++ b/BaiTapLon-HCJ/product.html
@@ -904,6 +904,19 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/style.js"></script>
+    <script>
+    $('#slider-range').slider({
+      range: true,
+      min: 0,
+      max: 500,
+      values: [ 75, 300 ],
+      slide: function( event, ui ) {
+        $( "#amount" ).val( "$" + ui.values[ 0 ] +".00"+ " - $" + ui.values[ 1 ]+".00" );
+      }
+    });
+    $( "#amount" ).val( "$" + $( "#slider-range" ).slider( "values", 0 )+".00" +
+      " - $" + $( "#slider-range" ).slider( "values", 1 )+".00" );
+    </script>
 </body>
 
 </html>
