--- a/BaiTapLon-HCJ/blog-detail.html
+++ b/BaiTapLon-HCJ/blog-detail.html
@@ -317,7 +317,7 @@
                             </div>
                             <div class="col-md-7" style="margin-top: 10px">
                                 <video width="100%" height="315" controls>
-                                    <source src="movie.mp4" type="video/mp4">
+                                    <source src="video/Organic.mp4" type="video/mp4">
                                     <source src="movie.ogg" type="video/ogg">
                                     Your browser does not support the video tag.
                                 </video>
