--- a/BaiTapLon-HCJ/contact.html
+++ b/BaiTapLon-HCJ/contact.html
@@ -274,18 +274,18 @@
                             <div class="col-sm-10">
                                <div class="form-contact">
                                     <p>GET IN TOUCH <span>WITH US</span></p>
-                                   <form>
+                                   <form id="form-contact">
                                        <div class="form-group contact-input">
-                                           <input type="text" class="form-control" placeholder="NAME" required="">
+                                           <input type="text" id="contact-name" class="form-control" placeholder="NAME" required="">
                                        </div>
                                        <div class="form-group contact-input">
-                                           <input type="email" class="form-control" placeholder="EMAIL" required="">
+                                           <input type="email" id="contact-mail" class="form-control" placeholder="EMAIL" required="">
                                        </div>
                                        <div class="form-group contact-input">
-                                           <input type="tel" pattern="[0]\d{9}" class="form-control" placeholder="PHONE" oninvalid="this.setCustomValidity('Sai định dạng số điện thoại. 10 ký tự bắt đầu từ 0')" oninput="setCustomValidity('')">
+                                           <input type="tel" pattern="[0]\d{9}" id="contact-phone" class="form-control" placeholder="PHONE" oninvalid="this.setCustomValidity('Sai định dạng số điện thoại. 10 ký tự bắt đầu từ 0')" oninput="setCustomValidity('')">
                                        </div>
                                        <div class="form-group contact-input">
-                                           <textarea class="form-control" rows="5" placeholder="COMMENTS"></textarea>
+                                           <textarea class="form-control" id="contact-cmt" rows="5" placeholder="COMMENTS"></textarea>
                                        </div>
                                        <button type="submit" class="btn btn-primary btn-contact">Submit</button>
                                    </form>
